--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 html, body, #map {
-    height: 100%;
+    height: 100% !important;
     width: 100% !important;
     }
 
@@ -19,7 +19,7 @@ p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
     font-weight: 300;
-    line-height: 1.7em;
+    line-height: 0.001em;
     color: #999;
 }
 
