--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ a:focus {
 }
 
 #sidebar ul p {
-    color: #fff;
+    /* color: #fff; */
     padding: 10px;
 }
 
@@ -97,8 +97,8 @@ a:focus {
 }
 
 #sidebar ul li a:hover {
-    color: #4B0082 !important;
-    background: #fff;
+    color: #fff !important;
+    background: #4B0082;
 }
 
 #sidebar ul li.active>a,
@@ -178,17 +178,16 @@ a.article:hover {
 /* -----------------------------------------------
     TOGGLESIDEBAR
 -------------------------------------------------- */
-}
 .btn-info.focus, .btn-info:focus {
     box-shadow: 0 0 0 0.2rem #6d7fcc;
 }
 .btn-info:hover {
-    color: #fff !important;
-    background-color: #6d7fcc !important;
+    /* color: #fff !important; */
+    background-color: #4B0082 !important;
     border-color: #6d7fcc !important;
 }
 .btn-info {
     color: #fff;
-    background-color: #6d7fcc !important;
+    background-color: #4B0082 !important;
     border-color: #6d7fcc !important;
 }
